[gd_scene load_steps=9 format=3 uid="uid://hc88uh4mv3bl"]

[ext_resource type="Texture2D" uid="uid://dgefas08ktcyc" path="res://icon.png" id="1_ivvc5"]
[ext_resource type="Script" path="res://scenes/ui/scripts/selection_button.gd" id="1_lkmno"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7w2ym"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.894118, 0.172549, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dmvk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_seb0r"]
bg_color = Color(1, 1, 1, 0.572549)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnhjt"]
bg_color = Color(1, 1, 1, 0.662745)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 16

[sub_resource type="Gradient" id="Gradient_gffba"]
offsets = PackedFloat32Array(0, 0.6, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.768627)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p13tg"]
gradient = SubResource("Gradient_gffba")
fill_to = Vector2(0, 1)

[node name="Button" type="Button"]
clip_children = 1
custom_minimum_size = Vector2(256, 256)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_7w2ym")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dmvk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_seb0r")
theme_override_styles/normal = SubResource("StyleBoxFlat_nnhjt")
script = ExtResource("1_lkmno")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ivvc5")

[node name="Gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_p13tg")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 26
text = "REALLY LONG GAME NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
